syntax = "proto3";
package omnivirt;

option cc_generic_services = true;


service InstanceGrpcService {
    rpc list_instances (ListInstancesRequest) returns (ListInstancesResponse) {}
}


message Instance {
    string name = 1;
    string image = 2;
    string vm_state = 3;
    string ip_address = 4;
}


message ListInstancesRequest {
}


message ListInstancesResponse {
    repeated Instance instances = 1;
}
